--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             in web development, machine learning, and human-computer interaction.
                         </span></p>
                 </div>
-                <a href="#" class = "btn btn3"> View Resume </a>
+                <a href="Vienna Parnell - Resume.pdf" target = "_blank" class = "btn btn3"> View Resume </a>
             </div>
         </div>
 
@@ -182,7 +182,7 @@
                                 of computer vision and explored the use of computer algorithms in interpreting human emotion
                                 by recognizing miniscule muscular movements in the face. 
                             </p>
-                            <a href = "https://docs.google.com/document/d/1Y3tET1nIrATbDB6v2K3L15StjG15enXY/edit?usp=sharing&ouid=101251099812790814136&rtpof=true&sd=true"
+                            <a href = "ViennaParnell_ConvolutionalNeuralNetworksFER.docx.pdf"
                             target = "_ blank"> 
                                 <i class = "fas fa-external-link-alt"> </i> </a>
                         </div>
@@ -210,7 +210,7 @@
                                 and Trend in the Biomedical Field," in the international peer-reviewed journal Nano
                                 Biomedicine and Engineering.
                             </p>
-                            <a href = "ViennaParnellReviewPaperPublished.pdf"> target = "blank" 
+                            <a href = "ViennaParnellReviewPaperPublished.pdf" target = "blank">
                                 <i class = "fas fa-external-link-alt"> </i> </a>
                         </div>
                     </div>
@@ -230,14 +230,14 @@
                             <a href = ""> <i class = "fab fa-linkedin"> </i> </a> 
                             <a href = ""> <i class = "fab fa-instagram"> </i> </a>
                         </div>
-                        <a href="#" class = "btn btn2"> View Resume </a>
+                        <a href="Vienna Parnell - Resume.pdf" target = "_blank" class = "btn btn2"> View Resume </a>
                     </div>
                     <div class="contact-right"> 
                         <form name = "submit-to-google-sheet">
                             <input type = "text" name = "Name" placeholder = "Your Name" required>
                             <input type = "email" name = "Email" placeholder = "Your Email" required>
                             <textarea name="Message" rows="6" placeholder = "Your Message"></textarea>
-                            <button type = "submit" class = "btn btn2">Submit</button>
+                            <button type = "submit" class = "btn btn3">Submit</button>
                         </form>
                         <span id = "msg"> Want to reach out? Send me a message! I look forward to connecting with you soon. </span>
                     </div>
@@ -245,7 +245,9 @@
             </div>
             <div class="copyright">
                 <p>
-                    Copyright © Vienna Parnell. Reference: Easy Tutorials on YouTube.
+                    Copyright © Vienna Parnell. 
+                    <br><br> <h6> Reference: <a href = "https://www.youtube.com/watch?v=0YFrGy_mzjY"
+                        target = "_blank"> Easy Tutorials </a> on YouTube. </h6>
                 </p>
             </div>
         </div>
