Addition of pure.html, other changes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang = "en">
 <head> 
@@ -7,7 +5,7 @@
     <meta http-equiv = "X-UA-Compatible" content = "IE=edge">
     <meta name = "viewport" content = "width=device-width", initial-scale="1.0">
     <title> Vienna Parnell's Personal Website </title>
-    <link rel = "stylesheet" href = "style.css">
+    <link rel = "stylesheet" type="text/css" href = "style.css">
     <script src="https://kit.fontawesome.com/32a86165fd.js" crossorigin="anonymous"></script>
 </head>
 
@@ -62,7 +60,7 @@
                         <div class="tab-contents active-tab" id = "education">
                             <ul>
                                 <li><span>2022-2025, anticipated </span><br> Vanderbilt University | Nashville, TN  
-                                    <br> GPA: 3.858 
+                                    <br> GPA: 3.86
                                     <br> <br>
                                     
                                     <span style = "display:block"> 
@@ -307,7 +305,6 @@
                         <br> <br>
 
                         Python &#9679 GitHub &#9679 Team Coding &#9679 Scheduling &#9679 Volunteering </p>
-
                     </div>
 
                     <div class = "ongoing-hover">
@@ -322,13 +319,15 @@
                             <br>
                             - General updates to the aesthetic and color scheme of the website. 
 
-                        <br> <br>
+                        <br> 
+                        <br>
 
                         Wix &#9679 Velo API &#9679 Graphic/Web Design &#9679 Branding </p>
 
                         <a href="https://purementorship.wixsite.com/my-site", target = "_blank">  
-                            <span> View Website > </span> </a>
-
+                            <span> View Website > </span> </a> <br>
+                        <a href="pure.html">  
+                            <span> Graphic design portfolio > </span> </a>
                     </div>
                 </div>
 
@@ -347,7 +346,7 @@
                         Python &#9679 PyCharm &#9679 OpenCV &#9679 Computer Vision &#9679 Google Colab &#9679 TensorFlow &#9679 Machine Learning  </p>
 
                         <a href="ViennaParnell_ConvolutionalNeuralNetworksFER.docx.pdf", target = "_blank">  
-                            <span>Learn more > </span> </a>
+                            <span> Learn more > </span> </a>
                     </div>
 
                     <div>
@@ -467,7 +466,7 @@
 
                         Marketing and Advertising &#9679 Graphic Design &#9679 Canva &#9679 Lucidchart &#9679 Social Media Management &#9679 Target Audience Analysis </p>
 
-                        <a href="https://drive.google.com/drive/u/0/folders/1vwhmWRMB8HxM3Qe-3kvuXmIniBghzwfD", target = "_blank">  
+                        <a href="pure.html", target = "_blank">  
                             <span>Learn more > </span> </a>
                     </div>
                 </div>
@@ -523,9 +522,9 @@
                         <p> <i class = "fas fa-paper-plane"> </i>vienna.z.parnell@vanderbilt.edu </p>
                         <p> <i class = "fas fa-phone-square-alt"> </i>669-262-9506 </p>
                         <div class="social-icons"> 
-                            <a href = ""> <i class = "fab fa-linkedin"> </i> </a> 
+                            <a href = "https://www.linkedin.com/in/vienna-parnell-38aa871a3/" target = "_blank"> <i class = "fab fa-linkedin"> </i> </a> 
                             <a href = "https://github.com/viennap" target = "_blank"> <i class="fa-brands fa-github"></i></i> </a>
-                            <a href = ""> <i class = "fab fa-instagram"> </i> </a>
+                            <a href = "http://instagram.com/viennaparnell" target = "_blank"> <i class = "fab fa-instagram"> </i> </a>
                         </div>
                         <a href="Vienna Parnell - Resume.pdf" target = "_blank" class = "btn btn2"> View Resume </a>
                     </div>
@@ -543,7 +542,9 @@
             </div>
             <div class="copyright">
                 <p>
-                    Copyright © Vienna Parnell. 
+                    Copyright © Vienna Parnell. <br>
+                    Coded from scratch using HTML/CSS and JavaScript. 
+                    <a href = "https://github.com/viennap/viennap.github.io" target = "_blank"> Hosted on GitHub Pages. </a>
                 </p>
             </div>
         </div>
