--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 
     <body>
+        <div id="loading-screen">
+            <div id="loading-text"> loading </div>
+            <div id="loading">
+                <h2></h2>
+            </div>
+        </div>
+
         <div id = "header"> 
             <div class = "container">
                 <nav class = "shift">
@@ -549,40 +556,8 @@
             </div>
         </div>
 
-        <script>
-            var tablinks = document.getElementsByClassName("tab-links");
-            var tabcontents = document.getElementsByClassName("tab-contents");
-            function opentab(tabname) {
-                for(tablink of tablinks) {
-                    tablink.classList.remove("active-link");
-                }
-                for(tabcontent of tabcontents) {
-                    tabcontent.classList.remove("active-tab");
-                }
-                event.currentTarget.classList.add("active-link");
-                document.getElementById(tabname).classList.add("active-tab");
-            }
-        </script>
+        <script src="script.js"></script>
 
-        <script>
-            const scriptURL = 'https://script.google.com/macros/s/AKfycbyIPcVh8v5Yz3I6wptEul4Zr060DrvKth3bQLZwghoDHSlKY-78hyiiJ8Dl_SjwO2GQ/exec'
-            const form = document.forms['submit-to-google-sheet']
-            const msg = document.getElementById("msg")
-        
-            form.addEventListener('submit', e => {
-            e.preventDefault()
-            msg.textContent = "Sending..."; 
-            fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-                .then(response => {
-                    msg.textContent = "Message sent successfully.";
-                    setTimeout(function(){
-                        msg.innerHTML = "";
-                    }, 1500)
-                    form.reset()
-                })
-                .catch(error => console.error('Error!', error.message))
-            })
-        </script>
     </body>
 
 </html>
