--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
     <body>
-  
+        <div id="loading-screen">
+            <iframe src="loading.html"></iframe>
+        </div>
+          
 
         <div id = "header"> 
             <div class = "container">
