Wait is this fr?

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 </head>
 
     <body>
+        
         <div id="loading-screen">
-            <iframe src="loading.html"></iframe>
+            <div id="loading-text"> loading </div>
+            <div id="loading">
+                <h2></h2>
+            </div>
         </div>
-          
 
         <div id = "header"> 
             <div class = "container">
