Changes to font + resume

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==
     " crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 
     <body>
@@ -43,7 +46,7 @@
                             I'm actively seeking opportunities to apply my skills and make a meaningful impact.
                         </span></p>
                 </div>
-                <a href="Vienna Parnell - Resume (Updated May 2023).pdf" target = "_blank" class = "btn btn3"> View Resume </a>
+                <a href="Vienna Parnell - Resume" target = "_blank" class = "btn btn3"> View Resume </a>
             </div>
 
             <a href = "#about" class="scroll-down"></a>
@@ -552,7 +555,7 @@
                             <a href = "https://github.com/viennap" target = "_blank"> <i class="fa-brands fa-github"></i></i> </a>
                             <a href = "http://instagram.com/viennaparnell" target = "_blank"> <i class = "fab fa-instagram"> </i> </a>
                         </div>
-                        <a href="Vienna Parnell - Resume (Updated May 2023).pdf" target = "_blank" class = "btn btn2"> View Resume </a>
+                        <a href="Vienna Parnell - Resume.pdf" target = "_blank" class = "btn btn2"> View Resume </a>
                     </div>
 
                     <div class="contact-right"> 
