--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             I'm actively seeking opportunities to apply my skills and make a meaningful impact.
                         </span></p>
                 </div>
-                <a href="Vienna Parnell - Resume" target = "_blank" class = "btn btn3"> View Resume </a>
+                <a href="Vienna Parnell - Resume.pdf" target = "_blank" class = "btn btn3"> View Resume </a>
             </div>
 
             <a href = "#about" class="scroll-down"></a>
