--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
 
                 <div class = "header-text">
                     <h1> <span> VIENNA PARNELL </span> <br> </h1>
-                    <p> Computer Science & Applied Mathematics @ Vanderbilt University <br>
+                    <p> Computer Science & Applied Mathematics @ Vanderbilt University
+                        <br> 
+                        Director @ Pure Mentorship | Program Coordinator @ Pioneer Academics | Startup Intern @ Marble Collective
+                        <br>
                         <span> I'm a programmer, podcast co-host, coding teacher, and published author who loves all things tech. 
                             With a passion for machine learning, graphic design, project management, and human-computer interaction, 
                             I'm actively seeking opportunities to apply my skills and make a meaningful impact.
@@ -307,7 +310,33 @@
                 <h1 class = "sub-title"> Projects </h1>
                 <br>
                 <h2 class = "ongoing"> Ongoing... </h2>
+                <br>    
+                    <img src = "Images/PM_LOGO.png", width = "200", height = "200">
+
+                    <h2> Director @ Pure Mentorship | Internship program </h2>
+                    <br>
+                    <p> As director of Pure Mentorship, a non-profit organization founded with the goal of connecting underrepresented students with
+                        experts in tech, I manage a team of 3 executive members, 10 interns, and 8 student leaders. I employ my computer science and engineering
+                        management expertise in leading the IT team and the development of the new website.
+
+                    <br><br>
+
+                    Please visit our 
+                    <a href="https://purementorship.wixsite.com/my-site", target = "_blank">  
+                        website</a> for more information. Follow us on 
+                    <a href="https://www.linkedin.com/company/pure-mentorship/", target = "_blank">  
+                            LinkedIn</a> and 
+                     <a href="https://www.instagram.com/purementorship/", target = "_blank">  
+                            Instagram</a>
+
+                    <br><br>
+
+                    Leadership &#9679 Program Management &#9679 Team Coding &#9679 HTML/CSS/JS &#9679 Agile Methodology </p>
                 <br>
+
+                <div class = "lately-list">
+                        
+                </div>
                 <div class="lately-list">
                     <div class = "ongoing-hover">
                         <i class="fa-solid fa-calendar-days"></i>
@@ -327,8 +356,7 @@
                         <i class="fa-solid fa-handshake-angle"></i>
                         <h2> Non-profit Organization Website </h2>
                 
-                        <p> Website for Pure Mentorship, a non-profit organization founded with the goal of connecting underrepresented students with
-                            experts in tech. This website is hosted on Wix, with specific components being coded using the Velo API. 
+                        <p> Original website for Pure Mentorship. This website is hosted on Wix, with specific components being coded using the Velo API. 
                             <br> <br>
                             Recent updates:
                             <br>
