--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             I'm actively seeking opportunities to apply my skills and make a meaningful impact.
                         </span></p>
                 </div>
-                <a href="Vienna Parnell - Resume.pdf" target = "_blank" class = "btn btn3"> View Resume </a>
+                   <!--<a href="Vienna Parnell - Resume.pdf" target = "_blank" class = "btn btn3"> View Resume </a>--> 
             </div>
 
             <a href = "#about" class="scroll-down"></a>
@@ -77,7 +77,7 @@
 
                         <div class="tab-contents active-tab" id = "education">
                             <ul>
-                                <li><span>2022-2025, anticipated </span><br> Vanderbilt University | Nashville, TN  
+                                <li><span>Undergraduate Student </span><br> Vanderbilt University | Nashville, TN  
                                     <br> GPA: 3.86
                                     <br> <br>
                                     
