--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
                             <a href = "https://github.com/viennap" target = "_blank"> <i class="fa-brands fa-github"></i></i> </a>
                             <a href = "http://instagram.com/viennaparnell" target = "_blank"> <i class = "fab fa-instagram"> </i> </a>
                         </div>
-                        <a href="Vienna Parnell - Resume.pdf" target = "_blank" class = "btn btn2"> View Resume </a>
+                        <!-- <a href="Vienna Parnell - Resume.pdf" target = "_blank" class = "btn btn2"> View Resume </a>-->
                     </div>
 
                     <div class="contact-right"> 
